# droneengage_visual_tracker

./: .gitignore  AI_ENHANCEMENT_PRIORITY1.md  CMakeLists.txt  config.module.json  de_tracker.config.module.json  template.json
scripts/: create_virtual_videos.sh  video.sh
src/: CMakeLists.txt  defines.hpp  main.cpp  tracker.cpp  tracker.hpp  tracker_andruav_message_parser.cpp  tracker_andruav_message_parser.hpp  tracker_main.cpp  tracker_main.hpp  udpClient.cpp  version.hpp
src/de_common/: messages.hpp  udpClient.cpp
src/helpers/: helpers.cpp  helpers.hpp
src/tracker/: tracker.cpp  tracker.hpp  tracker_andruav_message_parser.cpp  tracker_andruav_message_parser.hpp  tracker_facade.cpp  tracker_facade.hpp  tracker_main.cpp  tracker_main.hpp  udp_de_object_detection_tracking.cpp  udp_de_object_detection_tracking.hpp  video.cpp  video.hpp
src/uavos_common/: configFile.hpp  uavos_module.hpp
wiki/: AI Interaction with Tracker.md  messages-documentation.md
